--- a/breeze/tools/template.databrowser.html
+++ b/breeze/tools/template.databrowser.html
@@ -6,11 +6,11 @@
 
     <script class="data-row-template" type="text/template">
       <tr data-rowid="{{rowid}}">
-        <td width="10"><a class="action-edit btn1" title="Edit"><i class="icon-pencil"></i></a></td>
+        <td width="10"><a class="action-edit btn" title="Edit"><i class="icon-pencil"></i></a></td>
         [[#fields]]
-        <td>{{[[fieldName]]}}</td>
+        <td>[[fieldName]]</td>
         [[/fields]]
-        <td width="10"><a class="action-delete btn1" title="Delete"><i class="icon-trash"></i></a></td>
+        <td width="10"><a class="action-delete btn" title="Delete"><i class="icon-trash"></i></a></td>
       </tr>
     </script>
 
@@ -32,7 +32,7 @@
 
       <div class="row">
         <div class="span12">
-          <div class="navbar">
+          <div class="navbar navbar-inverse">
             <div class="navbar-inner">
               <div class="container">
                 <ul class="nav">
