--- a/tools/template.databrowser.html
+++ b/tools/template.databrowser.html
@@ -38,8 +38,8 @@
                 <ul class="nav">
                   <li><a class="action-create" title="Create"><i class="icon-plus icon-white"></i> Insert</a></li>
                   <li class="divider-vertical"></li>
-                  <li><a class="filters-switcher"><i class="icon-filter icon-white"></i> <span>Hide filters</span></a></li>
-                  <li><a class="filters-reset"><i class="icon-remove icon-white"></i> <span>Reset filters</span></a></li>
+                  <li><a class="action-show-hide-filters"><i class="icon-filter icon-white"></i> <span>Hide filters</span></a></li>
+                  <li><a class="action-reset-filters"><i class="icon-remove icon-white"></i> <span>Reset filters</span></a></li>
                 </ul>
                 <ul class="nav pull-right">
                   <li>
