--- a/tests/clipboard.html
+++ b/tests/clipboard.html
@@ -10,12 +10,12 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
     <!--[if lt IE 8]>
-      <script src="{/}js/json2.js"></script>
+      <script src="{br}3rdparty/json2/json2.js"></script>
     <![endif]-->
 
     <script src="{br}3rdparty/jquery/jquery-1.7.1.min.js"></script>
     <script src="{br}js/br.typecheck.js"></script>
-  <script src="{br}js/br.eventQueue.js"></script>
+    <script src="{br}js/br.eventQueue.js"></script>
     <script src="{br}js/br.js"></script>
     <script src="{br}js/br.clipboard.js"></script>
   </head>
