no more auto search

--- a/tools/template.databrowser.html
+++ b/tools/template.databrowser.html
@@ -58,7 +58,7 @@
             <div class="pull-left filter-block">
               <label>Search</label>
               <div class="input-append">
-                <input type="text" class="input-medium data-filter" title="Search by" placeholder="search text" name="keyword" />
+                <input type="text" class="input-medium data-filter" title="Search by" placeholder="search text" name="keyword" data-click-on-enter=".action-refresh" /><button class="btn action-refresh" type="button"><i class="icon-search"></i></button>
                 <button class="btn action-clear-one-filter" rel="keyword" type="button"><i class="icon-remove"></i></button>
               </div>
             </div>
