--- a/tools/template.databrowser.html
+++ b/tools/template.databrowser.html
@@ -32,7 +32,7 @@
 
       <div class="row-fluid">
         <div class="span12">
-          <div class="navbar navbar-edoctrina">
+          <div class="navbar navbar-internal navbar-edoctrina">
             <div class="navbar-inner">
               <div class="container">
                 <ul class="nav">
