--- a/tools/template.databrowser.html
+++ b/tools/template.databrowser.html
@@ -38,7 +38,7 @@
                 <ul class="nav">
                   <li>
                     <div class="btn-toolbar">
-                      <a class="action-create btn btn-warning" title="Create"><i class="icon-plus icon-white"></i> Insert</a>
+                      <a class="action-create btn btn-primary" title="Create"><i class="icon-plus icon-white"></i> Insert</a>
                     </div>
                   </li>
                   <li class="divider-vertical"></li>
