--- a/tests/datasource.html
+++ b/tests/datasource.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>[[config.page-title]]</title>
+    <title>[[br.config.page-title]]</title>
     <meta name="description" content="">
     <meta name="author" content="eDoctrina">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -10,11 +10,11 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
     <!--[if lt IE 8]>
-      <script src="{br}3rdparty/json2/json2.js"></script>
+      <script src="[[br]]3rdparty/json2/json2.js"></script>
     <![endif]-->
 
-    <script src="{br}3rdparty/jquery/jquery-1.7.1.min.js"></script>
-    <script src="{br}js/bright.min.js"></script>
+    <script src="[[br]]3rdparty/jquery/jquery-1.7.1.min.js"></script>
+    <script src="[[br]]js/bright.min.js"></script>
   </head>
   <body>
 
