--- a/tools/template.databrowser.html
+++ b/tools/template.databrowser.html
@@ -125,8 +125,8 @@
         </form>
       </div>
       <div class="modal-footer">
-        <a href="javascript:;" class="btn action-save">Save</a>
-        <a href="javascript:;" class="btn" data-dismiss="modal">Cancel</a>
+        <a href="javascript:" class="btn action-save">Save</a>
+        <a href="javascript:" class="btn" data-dismiss="modal">Cancel</a>
       </div>
     </div>
 
