--- a/tools/template.databrowser.html
+++ b/tools/template.databrowser.html
@@ -42,7 +42,7 @@
                     </div>
                   </li>
                   <li class="divider-vertical"></li>
-
+                  <li><a class="action-show-hide-filters"><i class="icon-filter icon-white"></i> <span>Hide filters</span></a></li>
                   <li><a class="action-reset-filters"><i class="icon-remove icon-white"></i> <span>Reset filters</span></a></li>
                   <li><a class="action-refresh"><i class="icon-refresh icon-white"></i> <span>Refresh</span></a></li>
                 </ul>
@@ -52,7 +52,7 @@
         </div>
       </div>
 
-      <div class="row-fluid filters-panel">
+      <div class="row-fluid filters-panel" style="display:none;">
         <div class="span12">
           <div class="filter-panel">
             <div class="pull-left filter-block">
