--- a/tools/template.databrowser.html
+++ b/tools/template.databrowser.html
@@ -52,7 +52,7 @@
         </div>
       </div>
 
-      <div class="row-fluid filters-panel" style="display:none;">
+      <div class="row-fluid filters-panel">
         <div class="span12">
           <div class="filter-panel">
             <div class="pull-left filter-block">
